pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-chetan
spec:
  containers:
    - name: nginx1
      image: nginx
