K8-service.yml
apiVersion: v1
kind: Service 
metadata: 
  name: tomcat-service
  labels: 
    run: tomcat
spec: 
  type: NodePort 
  ports: 
  - port: 8080
    nodePort: 23231 
    targetPort: nodejs-port 
    protocol: TCP 
    name: http 
  selector: 
    run: tomcat
